# FINAL-Version

./: Automate.h  CMakeLists.txt  Determinisation.c  MainFINALE.c
